Req10:Created dockerfile that builds front-end of app

--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:14
-WORKDIR /user/src/app/back-end
+WORKDIR /user/source/app/back-end
 EXPOSE 3001
 ADD node_modules.tar.gz ./
 COPY ./ ./
